[package]
name = "ghost_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
ntapi = "0.4"
winapi = { version = "0.3", features = ["winnt", "basetsd"] }
windows = { version = "0.48", features = [
    "Win32_System_Threading",
    "Win32_Foundation", 
    "Win32_Security"
] }

# Оптимизация размера билда
[profile.release]
opt-level = "z"  # Оптимизация по размеру
lto = true       # Link Time Optimization
strip = true     # Вырезаем отладочные символы
panic = "abort"  # Убираем лишний код обработки паники
